[google/compile-testing#222] add JVM arg to allow access to compiler internal APIs on Java 16